--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,44 @@
 nav {
+  position: fixed;
+  top: 0;
   width: 100%;
   height: 80px;
   background-color: black;
   color: white;
+  z-index: 1;
+}
+h2 {
+  font-size: 1.2em;
 }
 .header {
   width: 100%;
   height: 300px;
-  background-color: darkgray;
+  background: url('../src/img/bg2.jpg');
+  background-position: center;
+  background-size: cover;
+  margin-top: 80px;
+}
+.topArtistDetails {
+  width: 100%;
+  height: 100%;
+}
+#name {
+  width: 100%;
+  padding: 1px;
+  background-color: #00a5e6;
+  color: white;
+  text-align: center;
+  margin-top: 10px;
+}
+#img {
+  width: 100%;
+}
+#circle {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #00a5e6;
+  position: relative;
+  bottom: 100px;
+  left: 17%;
 }
